--- a/.gitignore
+++ b/.gitignore
@@ -166,5 +166,8 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,windows
 
+# Experiment files
+fig/
+
 # Jason's files
 palette.py
